# python-sketeton

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/: ci.yml
.github/workflow/: ci.yml
src/: __init__.py
