[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kundan", email = "kundan-de@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
]

[project.scripts]
python-template = "python_template:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
